--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.5.2",
     "antd": "^4.19.4",
     "gatsby": "^4.9.2",
+    "gatsby-plugin-better-jss": "^1.0.3",
     "less-loader": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
